--- a/posts/software/data_structures_algos/data_structures/data_structures.ipynb
+++ b/posts/software/data_structures_algos/data_structures/data_structures.ipynb
@@ -1906,6 +1906,18 @@
     "This is where a binary search tree comes in.\n",
     "\n",
     "\n",
+    "\n",
+    "| Operation | Complexity (Worst)*| Complexity (Best)        |\n",
+    "|-----------|--------------------|--------------------------|\n",
+    "| Read      | N/A                | N/A                      |\n",
+    "| Search    | O(N)               | O(log N)                 |\n",
+    "| Insertion | O(N)               | O(log N)                 |\n",
+    "| Deletion  | O(N)               | O(log N)                 |\n",
+    "\n",
+    "*The worst case corresponds to an imbalanced tree that is essentailly a linked list (a straight line).\n",
+    "The best case is a perfectly balanced tree.\n",
+    "\n",
+    "\n",
     "### 9.1. Trees \n",
     "\n",
     "Trees are another node-based data structure when each node can point to multiple other nodes.\n",
@@ -1946,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "id": "317e252e",
    "metadata": {},
    "outputs": [],
@@ -1973,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 2,
    "id": "4dc246e2",
    "metadata": {},
    "outputs": [],
@@ -1987,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 3,
    "id": "1bcf8794",
    "metadata": {},
    "outputs": [
@@ -1997,7 +2009,7 @@
        "TreeNode with value: a"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2008,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 4,
    "id": "e541475f",
    "metadata": {},
    "outputs": [
@@ -2018,7 +2030,7 @@
        "TreeNode with value: b"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2029,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 5,
    "id": "57555ea9",
    "metadata": {},
    "outputs": [
@@ -2039,7 +2051,7 @@
        "TreeNode with value: c"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2050,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 6,
    "id": "6327fb3c",
    "metadata": {},
    "outputs": [
@@ -2060,7 +2072,7 @@
        "Tree with root: TreeNode with value: a"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2070,11 +2082,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "7b04c3cc",
    "metadata": {},
+   "source": [
+    "### 9.4. Searching a Binary Search Tree\n",
+    "\n",
+    "1. Designate a current node (start with the root) and inspect its value.\n",
+    "2. If the current node is our target, success! Stop here.\n",
+    "3. If the current node is smaller than our target, search the left subtree. If it's larger, search the right subtree.\n",
+    "4. Repeat until we find our target. If we reach the end of the subtree without finding the target, then the target is not in the tree."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ba8b4b1",
+   "metadata": {},
+   "source": [
+    "### 9.5. Complexity\n",
+    "\n",
+    "Searching a binary search tree is $O(log N)$ in the best case (a perfectly balanced tree) since we narrow our search area by half on each step.\n",
+    "\n",
+    "The worst case is a horribly imbalanced tree. Imagine a tree that only has left descendants. This is essentially a linked list, so searching through it means inspecting every element. Therefore the worst case complexity is $O(N)$.\n",
+    "\n",
+    "So searching a binary search tree is the same complexity as a binary search performed on an ordered array. Where trees differentiate themselves is on **insertions and deletes**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a14e62a5",
+   "metadata": {},
+   "source": [
+    "### 9.6. Insertion\n",
+    "\n",
+    "1. Compare our new_node to each value in the tree starting from the root. Like with search, follow the path to the left if new_node is lower or right if higher.\n",
+    "2. Traverse until we find a node where the appropriate child (left or right) does not exist yet. Make new_node the child.\n",
+    "\n",
+    "The **order of insertion** is important to maintain balance. Binary search trees work best when seeded with randomly sorted data, as this will typically end up quite well-balanced. Seeding the tree with **sorted data leads to imbalanced trees**.\n",
+    "\n",
+    "Insertion is $O(log N)$ for balanced trees because we search for the correct place to insert and then perform an $O(1)$ operation to insert it.\n",
+    "\n",
+    "\n",
+    "### 9.7. Deletion\n",
+    "\n",
+    "Deleting a node is more complicated because it depends if the target node has 0, 1 or 2 children.\n",
+    "\n",
+    "Number of Children | Action\n",
+    "------|------\n",
+    "0     | Simply delete the node\n",
+    "1     | Replace the deleted node with its child\n",
+    "2     | Replace the deleted node with the **successor node**\n",
+    "\n",
+    "The **successor node** is the next largest descendant of the deleted node. More formally: the child node whose value is the least of all values that are greater than the deleted node.\n",
+    "\n",
+    "Finding the successor:\n",
+    "\n",
+    "1. Visit the right child of the deleted node.\n",
+    "2. Keep visiting left children until there are no more elft children. This is the successor node.\n",
+    "3. If the successor node has a right child, that child takes the original place of the successor node. The successor node gets moved to replace the deleted node.\n",
+    "\n",
+    "\n",
+    "Deletion is $O(log N)$ for balanced trees because we search for the correct place to insert and then perform (potentially several) $O(1)$ operations to delete the node and replace it with a child / successor.\n",
+    "\n",
+    "\n",
+    "### 9.8. Inorder Traversal\n",
+    "\n",
+    "The point of a binary search tree is to maintain order. We can traverse the elements in order with the following recursive algorithm.\n",
+    "\n",
+    "1. Call itself recursively on the node's left child. This will repeat until we hit a node without a left child.\n",
+    "2. Visit this node.\n",
+    "3. Call itself recursviely on the node's right child.\n",
+    "\n",
+    "Since we are visiting every element of the tree, this is necessarily $O(N)$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9bc4e626",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "def traverse(tree_node):\n",
+    "    \"\"\"Inorder traversal of a binary search tree.\"\"\"\n",
+    "    if tree_node is None:\n",
+    "        return\n",
+    "    traverse(tree_node.left)\n",
+    "    print(tree_node.value)\n",
+    "    traverse(tree_node.right)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e6030db",
+   "metadata": {},
    "source": []
   }
  ],
