Add notes for heap and trie

--- a/posts/software/data_structures_algos/data_structures/data_structures.ipynb
+++ b/posts/software/data_structures_algos/data_structures/data_structures.ipynb
@@ -2177,6 +2177,284 @@
    "cell_type": "markdown",
    "id": "3e6030db",
    "metadata": {},
+   "source": [
+    "## 10. Heaps\n",
+    "\n",
+    "### 10.1. Priority Queues\n",
+    "\n",
+    "A **queue** is a FIFO list that means data is inserted at the end but accessed/removed from the front.\n",
+    "\n",
+    "A **priority queue** is a list where deletions and access are the same as a regular queue, but *insertions are like an ordered array*.\n",
+    "So the priority queue is always ordered.\n",
+    "\n",
+    "An example use case is a triage system in a hospital: patients are seen based on severity, not just when they arrived.\n",
+    "\n",
+    "This is an abstract data types that we could implement in multiple ways using different fundamental data types. E.g. we *could* implement using an ordered array, but insertions would be O(N).\n",
+    "\n",
+    "Heaps are another data structure that fit this use case well.\n",
+    "\n",
+    "\n",
+    "### 10.2. Binary Heaps\n",
+    "\n",
+    "There a multiple kinds of heaps. As a starting point, we consider the **binary max-heap**, which is a special kind of binary tree.\n",
+    "\n",
+    "Binary max-heap conditions:\n",
+    "\n",
+    "1. **Heap condition**: Each node is greater than its children.\n",
+    "2. The tree must be **complete**.\n",
+    "\n",
+    "Because the heap condition is true for each node, we can recursively reason that a node is greater than its children, and they are too, then a node is greater than all of its *descendants*.\n",
+    "\n",
+    "The **complete** condition essentially means values are filled left-to-right, top-down with no holes. There are no empty positions anywhere except the bottom row, and the bottom row is filled from left to right. The **last node** is the rightmost node at its bottom level.\n",
+    "\n",
+    "There is also a min-heap variant. The difference is trivial, aside from the heap condition inequality being reversed, the logic is the same.\n",
+    "\n",
+    "\n",
+    "### 10.3. Heap Properties\n",
+    "\n",
+    "- Heaps are *weakly ordered*.\n",
+    "- The root node is the maximum value.\n",
+    "\n",
+    "With a binary search tree, we know precisely whether a value is the left or right descendant of a node. E.g. `3` will be a left child of `100`. \n",
+    "\n",
+    "But in a max-heap, we don't know whether `3` is to the left or right, only that it is a descendant rather than an ancestor.\n",
+    "\n",
+    "**Searching** would require inspecting every node, $O(N)$. In practice, searching a heap is not typically done in the use cases it is used for.\n",
+    "\n",
+    "**Reading** a heap typically refers to accessing the root node, which is $O(1)$.\n",
+    "\n",
+    "\n",
+    "### 10.4. Inserting into a Heap\n",
+    "\n",
+    "1. **Last node**: Insert the new node as the heap's last node\n",
+    "2. **Trickle up the new node**: Compare the new node to its parent. If it's greater than its parent, swap them.\n",
+    "\n",
+    "The number of steps to trickle is proportional to the depth of the tree. Therefore, insertion is a $O(log N)$ operation.\n",
+    "\n",
+    "\n",
+    "### 10.5. Deleting from a Heap\n",
+    "\n",
+    "We only ever delete the root node from a heap.\n",
+    "\n",
+    "1. **New root**: The *last node* becomes the new root node.\n",
+    "2. **Trickle down the root node**: Trickle the root down to its proper place.\n",
+    "\n",
+    "Trickling down is more complicated than trickling up because there are two possible directions to swap in. We compare to *both* children and **swap with the larger** of the two. This ensures the largest value ends up as the root node, which is the key property we want to preserve.\n",
+    "\n",
+    "Deletion is also $O(log N)$ since the number of steps to trickle is again proprtional to the depth of the tree.\n",
+    "\n",
+    "\n",
+    "### 10.6. Complexity of Heap vs Ordered Array\n",
+    "\n",
+    "An alternative way of implementing a priority queue would be using an ordered array rather than a heap.\n",
+    "\n",
+    "\n",
+    "   | Operation | Heap Complexity    | Array Complexity |\n",
+    "   |-----------|--------------------|-------------------\n",
+    "   | Read*     | $O(1)$             | $O(1)$\n",
+    "   | Search^   | $O(N)$             | $O(N)$\n",
+    "   | Insertion | $O(log N)$         | $O(N)$\n",
+    "   | Deletion  | $O(log N)$         | $O(1)$\n",
+    "   \n",
+    "\\* Reading the root node\n",
+    "\n",
+    "^ Searching is not typically done on a heap\n",
+    "\n",
+    "Comparing the complexities, heaps are fast, $O(log N)$, for both insertions and deletions, wheres ordered arrays are faster for deletions but slower for insertions.\n",
+    "\n",
+    "As this is in log space and priority queues typically perform similar numbers of inserts and deletes, on average this makes heap much faster.\n",
+    "\n",
+    "\n",
+    "### 10.7 The Problem of the Last Node\n",
+    "\n",
+    "Many operations with heaps, such as insertion, rely on knowing where the last node is. \n",
+    "\n",
+    "This is important because inserting/deleting the last node ensures the heap is always *complete*, and completeness is important to ensure the graph remains *well-balanced*.\n",
+    "\n",
+    "Being well-balanced ensures the heap remains *efficient*. As in the case of binary search tree, if a tree is severely unbalanced it effectively becomes a linked list, so actions that should search through the depth of the tree in $O(log N)$ time take $O(N)$ in the worst case.\n",
+    "\n",
+    "\n",
+    "#### 10.7.1. Array-based Heaps\n",
+    "Heaps are often implemented as arrays because the problem of the last node is so crucial, and accessing the last element of an array is $O(1)$.\n",
+    "\n",
+    "The tree below shows the values and their index in the corresponding array as `value|index`:\n",
+    "\n",
+    "```{mermaid}\n",
+    "flowchart TD\n",
+    "\n",
+    "    A[\"100|0\"] ---> B[\"88|1\"]\n",
+    "    A[\"100|0\"] ---> C[\"25|2\"]\n",
+    "\n",
+    "    B[\"88|1\"] ---> B1[\"87|3\"]\n",
+    "    B[\"88|1\"] ---> B2[\"16|4\"]\n",
+    "\n",
+    "    C[\"25|2\"] ---> C1[\"8|5\"]\n",
+    "    C[\"25|2\"] ---> C2[\"12|6\"]\n",
+    "```\n",
+    "\n",
+    "\n",
+    "The array representation is then:\n",
+    "\n",
+    "| 0   | 1  | 2  | 3  | 4  | 5 | 6  |\n",
+    "|-----|----|----|----|----|---|----|\n",
+    "| 100 | 88 | 25 | 87 | 16 | 8 | 12 |\n",
+    "\n",
+    "The indices are then deterministic. We can find the **child** index of any given node as:\n",
+    "```\n",
+    "left_child_idx = (parent_index * 2) + 1\n",
+    "right_child_idx = (parent_index * 2) + 2\n",
+    "```\n",
+    "\n",
+    "To find a given node's parent index:\n",
+    "```\n",
+    "parent_idx = (child_idx - 1) // 2\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### 10.7.2. Linked Node-based Heaps\n",
+    "\n",
+    "It is also possible to implement heaps as linked nodes.\n",
+    "\n",
+    "In this case, a different trick is required to solve the problem of the last node using **binary numbers**.\n",
+    "\n",
+    "\n",
+    "1. **Assign Binary Numbers**: Each level of the heap is assigned a unique binary number. The root is 0, then each left child is concatenates the parent's number with 0 at the end, and each right child concatenates the parent's index with 1 at the end.\n",
+    "2. **Insertion using Binary Representation**: To insert a new node into the heap, you convert the index of the node into binary form. Starting from the most significant bit (MSB), traverse the heap according to the binary digits:\n",
+    "    1. If the bit is 0, move to the left child.\n",
+    "    2. If the bit is 1, move to the right child.\n",
+    "3. **Insertion at the Last Available Position**: As you traverse the heap, you'll eventually reach a node that doesn't exist yet. This node represents the last available position in the heap, where the new node can be inserted while maintaining the complete binary tree property.\n",
+    "\n",
+    "\n",
+    "```{mermaid}\n",
+    "flowchart TD\n",
+    "\n",
+    "A[\"100|0\"] ---> B[\"88|00\"]\n",
+    "A[\"100|0\"] ---> C[\"25|01\"]\n",
+    "\n",
+    "B[\"88|00\"] ---> B1[\"87|000\"]\n",
+    "B[\"88|00\"] ---> B2[\"16|001\"]\n",
+    "\n",
+    "C[\"25|01\"] ---> C1[\"8|010\"]\n",
+    "C[\"25|01\"] ---> C2[\"12|011\"]\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6323da42",
+   "metadata": {},
+   "source": [
+    "## 11. Tries\n",
+    "\n",
+    "This is a kind of tree which is particularly useful for text-based features.\n",
+    "\n",
+    "Each trie node can have any number of children. Each word is split into characters which are stored as a series of nested child nodes. A terminal character is used to denote the end of a word.\n",
+    "\n",
+    "```{mermaid}\n",
+    "flowchart TD\n",
+    "\n",
+    "G(G) ---> U(U) ---> R(R) ---> P(P) ---> X(*)\n",
+    "```\n",
+    "\n",
+    "### 11.1. Trie Search\n",
+    "\n",
+    "There are two flavours of search: (1) checking if a substring is a valid prefix, and (2) checking if a substring is a valid whole word.\n",
+    "\n",
+    "The algorithm below is for the more general case of searching for a prefix. Searching for a whole word then becomes trivial because we have a terminal character, so we can search for \"Implement*\" to find the whole word.\n",
+    "\n",
+    "Iterate through the trie one character at a time:\n",
+    "\n",
+    "1. Initialise `current_node` at the root.\n",
+    "2. Iterate through each character of `search_string` and see if current_node has a child with that key.\n",
+    "3. Repeat Step 3 for the whole `search_string`. If the character is not a valid key, the word does not exist.\n",
+    "\n",
+    "The efficiency of a trie search depends on the *length of the search term*, $K$, **not** the *number of elements stored in the trie*, $N$. Therefore, it has complexity $O(K)$.\n",
+    "\n",
+    "\n",
+    "### 11.2. Trie Insertion\n",
+    "\n",
+    "Inserting a new word into a trie follows similar steps to searching for an existing word: we traverse the trie and insert new nodes where they do not already exist.\n",
+    "\n",
+    "1. Initialise `current_node` at the root.\n",
+    "2. Iterate through each character of `search_string` and see if current_node has a child with that key.\n",
+    "    1. If the key exists, update `current_node` to move to that next node.\n",
+    "    2. Otherwise, create a new child node and update `current_node` to move to it.\n",
+    "3. Insert the terminal character of the word at the end.\n",
+    "\n",
+    "This is again $O(K)$ since it depends on the length of the input, not the data stored in the trie.\n",
+    "\n",
+    "\n",
+    "### 11.3. Implementation\n",
+    "We can implement a trie as dictionaries nested within dictionaries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "16b2e160",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TrieNode:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.children = {}\n",
+    "        \n",
+    "        \n",
+    "class Trie:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.root = TrieNode()\n",
+    "        self._TERMINAL_CHAR = \"*\"\n",
+    "        \n",
+    "    def search(self, word):\n",
+    "        \"\"\"Search for a given word in the Trie.\"\"\"\n",
+    "        current_node = self.root\n",
+    "        \n",
+    "        for char in word:\n",
+    "            if char in current_node.keys():\n",
+    "                # Keep traversing as long as we find valid children\n",
+    "                current_node = current_node[char]\n",
+    "            else: \n",
+    "                # The search_string is not a valid prefix, so return None\n",
+    "                return None\n",
+    "        \n",
+    "        return current_node\n",
+    "    \n",
+    "    def insert(self, new_word):\n",
+    "        \"\"\"Insert a new word into the Trie.\"\"\"\n",
+    "        current_node = self.root\n",
+    "\n",
+    "        # Traverse the word + terminal character\n",
+    "        for char in new_word + self._TERMINAL_CHAR:\n",
+    "            if char in current_node.keys():\n",
+    "                # Keep traversing as long as we find valid children\n",
+    "                current_node = current_node[char]\n",
+    "            else:\n",
+    "                current_node[char] = {}\n",
+    "                current_node = current_node[char]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ea72369",
+   "metadata": {},
+   "source": [
+    "### 11.4. Autocomplete\n",
+    "\n",
+    "A good use case of tries is for autocomplete.\n",
+    "\n",
+    "We use a trie to store our dictionary of possible words.\n",
+    "\n",
+    "Then for a given user input, we can recursively list all of the words with that prefix.\n",
+    "\n",
+    "We can improve autocomplete further by storing an integer `popularity` value as the terminal value rather than an empty dictionary or null value. This can be a 1-10 score of how commonly used that word is, so that we can prioritise showing more common words as autocompletion suggestions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cf8c755",
+   "metadata": {},
    "source": []
   }
  ],
