Heap sort notes

--- a/posts/software/data_structures_algos/sorting/sorting.ipynb
+++ b/posts/software/data_structures_algos/sorting/sorting.ipynb
@@ -1008,15 +1008,16 @@
    "source": [
     "## 7. Heap Sort\n",
     "\n",
-    "Builds a heap data structure from the input data and then repeatedly removes the largest element from the heap and inserts it into the sorted array.\n",
-    "\n",
-    "Imagine you have a pile of numbered blocks, and you want to sort them from smallest to largest. You could use a heap sort to do this.\n",
-    "\n",
     "### 7.1. Algorithm\n",
     "\n",
-    "1. Build a heap. First, you arrange the blocks into a special structure called a heap. In a heap, each block is either larger than or equal to its parent block (max heap), or smaller than or equal to its parent block (min heap). This means the largest (or smallest) block is at the root of the heap.\n",
-    "1. Heapify: Once you have your heap, you remove the root block (which is the largest or smallest, depending on the type of heap) and place it at the end of your sorted list. Then, you rearrange the remaining blocks to form a new heap.\n",
-    "3. Sorting: Repeat this process until all elements are sorted.\n",
+    "A max-heap is \"weakly sorted\"; the maximum value is the root of the heap, and nodes are greater than all of their descendants.\n",
+    "\n",
+    "We can use this property to sort data elements by creating a heap from the data, then popping the maximum value one-by-one to populate an array in order.\n",
+    "\n",
+    "1. **Build a heap**: Create a max-heap, which ensures the maximum value is at the root of the heap.\n",
+    "2. **Pop the root**: Remove the root and place it at the end of the result array.\n",
+    "3. **Heapify**: Rearrange the remaining blocks to form a new heap.\n",
+    "4. **Repeat**: Iterate through the entire heap until all elements are sorted.\n",
     "\n",
     "\n",
     "### 7.2. Implementation"
@@ -1024,47 +1025,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def heapify(arr, n, i):\n",
+    "def heapify(array, n, i):\n",
     "    largest = i  # Initialize largest as root\n",
     "    left = 2 * i + 1\n",
     "    right = 2 * i + 2\n",
     "\n",
     "    # Check if left child exists and is greater than root\n",
-    "    if left < n and arr[left] > arr[largest]:\n",
+    "    if left < n and array[left] > array[largest]:\n",
     "        largest = left\n",
     "\n",
     "    # Check if right child exists and is greater than the largest so far\n",
-    "    if right < n and arr[right] > arr[largest]:\n",
+    "    if right < n and array[right] > array[largest]:\n",
     "        largest = right\n",
     "\n",
     "    # Change root, if needed\n",
     "    if largest != i:\n",
-    "        arr[i], arr[largest] = arr[largest], arr[i]  # Swap\n",
+    "        array[i], array[largest] = array[largest], array[i]  # Swap\n",
     "        # Heapify the affected sub-tree\n",
-    "        heapify(arr, n, largest)\n",
+    "        heapify(array, n, largest)\n",
     "\n",
-    "def heap_sort(arr):\n",
-    "    n = len(arr)\n",
+    "def heap_sort(array):\n",
+    "    \"\"\"Heap sort algorithm to sort an array into ascending order.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        The array that we wish to sort.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    array: list\n",
+    "        The sorted array sorted in-place.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    n = len(array)\n",
     "\n",
     "    # Build a max heap.\n",
     "    for i in range(n // 2 - 1, -1, -1):\n",
-    "        heapify(arr, n, i)\n",
+    "        heapify(array, n, i)\n",
     "\n",
     "    # One by one extract elements\n",
     "    for i in range(n - 1, 0, -1):\n",
-    "        arr[i], arr[0] = arr[0], arr[i]  # Swap\n",
-    "        heapify(arr, i, 0)\n",
+    "        array[i], array[0] = array[0], array[i]  # Swap\n",
+    "        heapify(array, i, 0)\n",
     "\n",
-    "    return arr"
+    "    return array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1087,7 @@
        "[0, 1, 3, 5, 7, 8, 8, 9, 12, 23, 69, 420]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,14 +1103,22 @@
    "source": [
     "### 7.3. Complexity\n",
     "\n",
-    "There are two steps in the algorithm:\n",
+    "The pre-processing step is to build the heap. This operation takes O(n) time.\n",
     "\n",
-    "1. Building the heap (heapify): This operation takes O(n) time.\n",
-    "2. Extracting the maximum (or minimum) element and heapifying: This operation is performed n times, each taking O(log n) time.\n",
-    "Since both operations are performed independently of each other, the overall time complexity of heap sort remains O(n log n) across all cases.\n",
+    "Once the heap is created, we perform the following operations:\n",
+    "1. **Pop the max value**: This is accessible as it is the root, so $O(1)$ time.\n",
+    "2. **Insert at the end of the result array**: This is also $O(1)$ time.\n",
+    "3. **Heapifying**: This takes $O(log N)$ time.\n",
     "\n",
-    "The time complexity of heap sort in the best case, average case, and worst case is the same, $O(N log N)$.\n"
+    "These are performed for each of the $N$ data elements, so the overall time complexity of heap sort is $O(N log N)$.\n",
+    "\n",
+    "This is the same regardless of the arrangement of the input, so the time complexity of heap sort is the same in the best case, average case, and worst case."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
