Heap sort implementation

--- a/posts/software/data_structures_algos/sorting/sorting.ipynb
+++ b/posts/software/data_structures_algos/sorting/sorting.ipynb
@@ -1025,28 +1025,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def heapify(array, n, i):\n",
-    "    largest = i  # Initialize largest as root\n",
-    "    left = 2 * i + 1\n",
-    "    right = 2 * i + 2\n",
+    "def heapify(array, heap_size, current_idx):\n",
+    "    \"\"\"Heapify function to maintain the max-heap property.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    array: list\n",
+    "        List of elements\n",
+    "    heap_size: int\n",
+    "        Size of heap\n",
+    "    current_idx: int\n",
+    "        Index of current node\n",
     "\n",
-    "    # Check if left child exists and is greater than root\n",
-    "    if left < n and array[left] > array[largest]:\n",
-    "        largest = left\n",
+    "    Returns\n",
+    "    -------\n",
+    "    None\n",
+    "        The input heap `array` is heapified in-place.\n",
+    "    \"\"\"\n",
+    "    # Track the largest node, initially assumed to be the root\n",
+    "    largest = current_idx  \n",
+    "    left_child = 2 * current_idx + 1\n",
+    "    right_child = 2 * current_idx + 2\n",
     "\n",
-    "    # Check if right child exists and is greater than the largest so far\n",
-    "    if right < n and array[right] > array[largest]:\n",
-    "        largest = right\n",
+    "    # Check if the node's children, if it has any, are larger than the current node\n",
+    "    if left_child < heap_size and array[left_child] > array[largest]:\n",
+    "        largest = left_child\n",
+    "    if right_child < heap_size and array[right_child] > array[largest]:\n",
+    "        largest = right_child\n",
     "\n",
-    "    # Change root, if needed\n",
-    "    if largest != i:\n",
-    "        array[i], array[largest] = array[largest], array[i]  # Swap\n",
-    "        # Heapify the affected sub-tree\n",
-    "        heapify(array, n, largest)\n",
+    "\n",
+    "    if largest != current_idx:\n",
+    "        # If largest is not root, swap it with root to maintain the heap condition\n",
+    "        array[current_idx], array[largest] = array[largest], array[current_idx]\n",
+    "        # Recursively heapify the affected sub-tree\n",
+    "        heapify(array, heap_size, largest)\n",
+    "\n",
     "\n",
     "def heap_sort(array):\n",
     "    \"\"\"Heap sort algorithm to sort an array into ascending order.\n",
@@ -1061,16 +1078,19 @@
     "    array: list\n",
     "        The sorted array sorted in-place.\n",
     "    \"\"\"\n",
+    "    # 1. Build a max heap.\n",
+    "    # Start from the last non-leaf node, and heapify each node\n",
+    "    array_len = len(array)\n",
+    "    idx_last_non_leaf = array_len // 2 - 1\n",
+    "    idx_last_node = array_len - 1\n",
     "\n",
-    "    n = len(array)\n",
+    "    for i in range(idx_last_non_leaf, -1, -1):\n",
+    "        heapify(array, array_len, i)\n",
     "\n",
-    "    # Build a max heap.\n",
-    "    for i in range(n // 2 - 1, -1, -1):\n",
-    "        heapify(array, n, i)\n",
-    "\n",
-    "    # One by one extract elements\n",
-    "    for i in range(n - 1, 0, -1):\n",
-    "        array[i], array[0] = array[0], array[i]  # Swap\n",
+    "    # 2. Extract elements one-by-one starting from the end\n",
+    "    for i in range(idx_last_node, 0, -1):\n",
+    "        array[i], array[0] = array[0], array[i]\n",
+    "        # 3. Maintain the heap condition for the unsorted portion of the array\n",
     "        heapify(array, i, 0)\n",
     "\n",
     "    return array"
@@ -1078,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1107,7 @@
        "[0, 1, 3, 5, 7, 8, 8, 9, 12, 23, 69, 420]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,6 +1126,7 @@
     "The pre-processing step is to build the heap. This operation takes O(n) time.\n",
     "\n",
     "Once the heap is created, we perform the following operations:\n",
+    "\n",
     "1. **Pop the max value**: This is accessible as it is the root, so $O(1)$ time.\n",
     "2. **Insert at the end of the result array**: This is also $O(1)$ time.\n",
     "3. **Heapifying**: This takes $O(log N)$ time.\n",
